[gd_scene load_steps=8 format=3 uid="uid://c52n66umx0j5h"]

[ext_resource type="Script" uid="uid://bs2etc1qjtji2" path="res://scenes/heroes/ranger_hero.gd" id="1_hsk3w"]
[ext_resource type="PackedScene" uid="uid://coirid61w00ks" path="res://scenes/projectiles/arrow.tscn" id="2_oks3e"]
[ext_resource type="PackedScene" uid="uid://dhealthbar5x" path="res://scenes/ui/health_bar.tscn" id="3_healthbar"]

[sub_resource type="CircleShape2D" id="CircleShape2D_df4ti"]
radius = 20.09975

[sub_resource type="CircleShape2D" id="CircleShape2D_fxg0a"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ea74a"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hsk3w"]
radius = 35.014282

[node name="RangerHero" type="CharacterBody2D" groups=["hero"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_hsk3w")
arrow_scene = ExtResource("2_oks3e")

[node name="Sprite2D" type="ColorRect" parent="."]
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
color = Color(0.039215688, 0.07058824, 1, 1)

[node name="Label" type="Label" parent="Sprite2D"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
mouse_filter = 2
text = "RANGER"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_df4ti")

[node name="RangedDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangedDetection"]
position = Vector2(21, 21)
shape = SubResource("CircleShape2D_fxg0a")

[node name="MeleeDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeDetection"]
shape = SubResource("CircleShape2D_ea74a")

[node name="RangeIndicator" type="Polygon2D" parent="."]
color = Color(0.3, 0.5, 1, 0.3)

[node name="HealthBar" parent="." instance=ExtResource("3_healthbar")]
offset_left = -25.0
offset_top = -35.0
offset_right = 25.0
offset_bottom = -29.0

[node name="ClickArea" type="Area2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("CircleShape2D_hsk3w")
